# ashare-lowfreq-research

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-CN.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
configs/: demo_research.toml  research_excess_v3.toml  research_industry_v4_v1.toml  research_industry_v4_v1_1.toml  research_industry_v4_v1_1_qlib.toml  research_industry_v4_v1_1_qlib_native21.toml  research_industry_v4_v2_validation_longer.toml  three_day_momentum.toml
configs/native/: demo_strategy.toml  five_positive_strategy.toml  full_market_strategy.toml  hs300_strategy.toml
configs/qlib/: demo_strategy.toml
docs/: FIVE_POSITIVE_STRATEGY.md  USER_GUIDE.md  modeling.md  qlib-integration.md  research-pipeline.md  strategy-v1-1-latest-active-data-source.md  strategy-v1-1-premarket-runbook.md
docs-site/: cli-reference.md  demo-data.md  index.md  quickstart.md  real-data.md  web-console.md
experiments/: README.md
scripts/: bootstrap_demo.sh  build_demo_qlib_provider.py  run_v1_1_premarket.sh  run_v1_1_premarket脚本使用指南.md  update_calendar.py  update_instruments.py
src/ashare_backtest/: logging_utils.py
tests/: test_cli_latest_inference_from_config.py  test_cli_premarket_from_config.py  test_cli_start_date_robustness_from_config.py  test_cli_walk_forward_from_config.py  test_latest_inference.py  test_premarket_reference.py  test_research_config.py  test_score_strategy_exit_policy.py  test_start_date_robustness.py  test_tdx_import.py  test_universe_gate.py  test_walk_forward_training.py  test_web_app.py
(+53 files in other folders)
