[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-backtest"
version = "0.1.0"
description = "Personal A-share low-frequency backtesting tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
ashare-backtest = "ashare_backtest.cli.main:main"
ashare-backtest-web = "ashare_backtest.web.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
